syntax = "proto3";

import "common.proto";
import "projects.proto";
import "notifications.proto";

package metadata_svc;

service MetadataSvc {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetProjectStatus(GetProjectStatusRequest) returns (GetProjectStatusResponse);
  rpc SetProjectStatus(SetProjectStatusRequest) returns (SetProjectStatusResponse);
  rpc ProjectExists(ProjectExistsRequest) returns (ProjectExistsResponse);
  rpc GetNotificationSettings(GetNotificationSettingsRequest) returns (GetNotificationSettingsResponse);
  rpc SetNotificationSettings(SetNotificationSettingsRequest) returns (SetNotificationSettingsResponse);
}

message CreateProjectRequest {
  common.ProjectId id = 1;
}

message CreateProjectResponse {
  common.ProjectId id = 1;
}

message GetProjectStatusRequest {
  common.ProjectId id = 1;
}

message GetProjectStatusResponse {
  projects.ProjectStatus status = 1;
}

message SetProjectStatusRequest {
  common.ProjectId id = 1;
  projects.ProjectStatus status = 2;
}

message SetProjectStatusResponse {
  projects.ProjectStatus old_status = 1;
}

message ProjectExistsRequest {
  common.ProjectId id = 1;
}

message ProjectExistsResponse {
  bool exists = 1;
}

message GetNotificationSettingsRequest {
  common.ProjectId id = 1;
}

message GetNotificationSettingsResponse {
  notifications.ProjectNotificationSettings settings = 1;
}


message SetNotificationSettingsRequest {
  common.ProjectId id = 1;
  notifications.ProjectNotificationSettings settings = 2;
}

message SetNotificationSettingsResponse {
  notifications.ProjectNotificationSettings old_settings = 1;
}

